Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/Recce_Detail__c.object-meta.xml
<CustomObject>
    <description>Object to hold Recce report details for a branding request that is generted by the vendor.</description>
    <label>Recce Detail</label>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>Recce Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recce Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>