Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/fields/Branding_Request__c.field-meta.xml
<CustomField>
    <fullName>Branding_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branding Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Recce Details</relationshipLabel>
    <relationshipName>Recce_Details</relationshipName>
    <type>Lookup</type>
</CustomField>