Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branding_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Vinyl on Sunboard</fullName>
            </value>
            <value>
                <fullName>One-way-Vision</fullName>
            </value>
            <value>
                <fullName>Front lit Flex Board</fullName>
            </value>
            <value>
                <fullName>Back lit board (GSB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>