Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Branding_Request__r.CaseNumber &amp;&quot; - &quot;&amp; Shop__r.Name &amp;&quot; - &quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>