Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/fields/SQ_FT__c.field-meta.xml
<CustomField>
    <fullName>SQ_FT__c</fullName>
    <defaultValue>&quot;SQ.FT&quot;</defaultValue>
    <label>SQ.FT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>