Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/fields/Total_Updated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Updated_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Updated Cost for shop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>