Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/fields/Updated_Height_in_Inches__c.field-meta.xml
<CustomField>
    <fullName>Updated_Height_in_Inches__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Updated Height in Inches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>