Partial_14Dec2021/force-app/main/default/objects/Recce_Detail__c/validationRules/Users_Recce.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_Recce</fullName>
    <active>true</active>
    <description>Other than the related vendor no user can edit Recce fields.</description>
    <errorConditionFormula>AND($User.Id &lt;&gt; Branding_Request__r.Vendor__c,$User.Id &lt;&gt; Branding_Request__r.Branding_Team_Member__c, (ISCHANGED(Branding_Type__c) || ISCHANGED(Height_in_Inches__c)||ISCHANGED(Width_in_Inches__c)||ISCHANGED(Job_Type__c)))</errorConditionFormula>
    <errorMessage>You do not have the permissions to edit the record at this stage.</errorMessage>
</ValidationRule>